Some minor updates/naming changes to reduce gcc compile warnings.

--- a/enet/enet_vs7.vcproj
+++ b/enet/enet_vs7.vcproj
@@ -26,8 +26,8 @@
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				BufferSecurityCheck="TRUE"
-				EnableFunctionLevelLinking="TRUE"
-				EnableEnhancedInstructionSet="2"
+				EnableFunctionLevelLinking="FALSE"
+				EnableEnhancedInstructionSet="0"
 				UsePrecompiledHeader="0"
 				PrecompiledHeaderThrough=""
 				BrowseInformation="1"
