--- a/game/game.cbp
+++ b/game/game.cbp
@@ -9,7 +9,7 @@
 			<Target title="Debug Win32 - gcc">
 				<Option platforms="Windows;" />
 				<Option output="Debug\Egoboo2x" prefix_auto="1" extension_auto="1" />
-				<Option object_output="Debug" />
+				<Option object_output="Debug_gcc" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Option use_console_runner="0" />
@@ -55,10 +55,9 @@
 			<Target title="Release Win32 - gcc">
 				<Option platforms="Windows;" />
 				<Option output="Release\Egoboo2x" prefix_auto="1" extension_auto="1" />
-				<Option object_output="Release" />
-				<Option type="1" />
+				<Option object_output="Release_gcc" />
+				<Option type="0" />
 				<Option compiler="gcc" />
-				<Option use_console_runner="0" />
 				<Compiler>
 					<Add option="-fexpensive-optimizations" />
 					<Add option="-O3" />
@@ -78,6 +77,7 @@
 					<Add directory="$(SolutionDir)\res" />
 				</ResourceCompiler>
 				<Linker>
+					<Add option="-s" />
 					<Add library="SDLmain" />
 					<Add library="SDL" />
 					<Add library="SDL_ttf" />
@@ -99,7 +99,7 @@
 			<Target title="Debug Blah-nix">
 				<Option platforms="Unix;" />
 				<Option output="Debug\Egoboo2x" prefix_auto="1" extension_auto="1" />
-				<Option object_output="Debug" />
+				<Option object_output="Debug_nix" />
 				<Option type="0" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -131,7 +131,7 @@
 			<Target title="Release Blah-nix">
 				<Option platforms="Unix;" />
 				<Option output="Release\Egoboo2x" prefix_auto="1" extension_auto="1" />
-				<Option object_output="Release" />
+				<Option object_output="Release_nix" />
 				<Option type="0" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -161,7 +161,7 @@
 			<Target title="Debug OsX">
 				<Option platforms="Mac;" />
 				<Option output="Debug\Egoboo2x" prefix_auto="1" extension_auto="1" />
-				<Option object_output="Debug" />
+				<Option object_output="Debug_mac" />
 				<Option type="0" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -184,7 +184,7 @@
 			<Target title="Release OsX">
 				<Option platforms="Mac;" />
 				<Option output="Release\Egoboo2x" prefix_auto="1" extension_auto="1" />
-				<Option object_output="Release" />
+				<Option object_output="Release_mac" />
 				<Option type="0" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -203,7 +203,7 @@
 			<Target title="Debug Win32 - msvc">
 				<Option platforms="Windows;" />
 				<Option output="Debug\Egoboo2x" prefix_auto="1" extension_auto="1" />
-				<Option object_output="Debug" />
+				<Option object_output="Debug_msvc" />
 				<Option type="1" />
 				<Option compiler="msvctk" />
 				<Option use_console_runner="0" />
@@ -254,9 +254,8 @@
 				<Option platforms="Windows;" />
 				<Option output="Release\Egoboo2x" prefix_auto="1" extension_auto="1" />
 				<Option object_output="Release" />
-				<Option type="1" />
+				<Option type="0" />
 				<Option compiler="msvctk" />
-				<Option use_console_runner="0" />
 				<Compiler>
 					<Add option="/MD" />
 					<Add option="/Gd" />
@@ -390,18 +389,6 @@
 			<Option target="Debug Win32 - msvc" />
 			<Option target="Release Win32 - msvc" />
 		</Unit>
-		<Unit filename="Task.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="Task.h" />
-		<Unit filename="Ticker.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="Ticker.h" />
-		<Unit filename="Timer.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="Timer.h" />
 		<Unit filename="Ui.c">
 			<Option compilerVar="CC" />
 		</Unit>
@@ -494,8 +481,37 @@
 		</Unit>
 		<Unit filename="input.h" />
 		<Unit filename="input.inl" />
+		<Unit filename="inspirational\MainLoop.c">
+			<Option compilerVar="CC" />
+			<Option compile="0" />
+			<Option link="0" />
+			<Option target="&lt;{~None~}&gt;" />
+		</Unit>
+		<Unit filename="inspirational\Task.c">
+			<Option compilerVar="CC" />
+			<Option compile="0" />
+			<Option link="0" />
+			<Option target="&lt;{~None~}&gt;" />
+		</Unit>
+		<Unit filename="inspirational\Task.h" />
+		<Unit filename="inspirational\Ticker.c">
+			<Option compilerVar="CC" />
+			<Option compile="0" />
+			<Option link="0" />
+			<Option target="&lt;{~None~}&gt;" />
+		</Unit>
+		<Unit filename="inspirational\Ticker.h" />
+		<Unit filename="inspirational\Timer.c">
+			<Option compilerVar="CC" />
+			<Option compile="0" />
+			<Option link="0" />
+			<Option target="&lt;{~None~}&gt;" />
+		</Unit>
+		<Unit filename="inspirational\Timer.h" />
 		<Unit filename="inspirational\cartman.c">
 			<Option compilerVar="CC" />
+			<Option compile="0" />
+			<Option link="0" />
 			<Option target="&lt;{~None~}&gt;" />
 		</Unit>
 		<Unit filename="inspirational\cartman.h" />
@@ -541,6 +557,7 @@
 		<Unit filename="sound.h" />
 		<Unit filename="..\res\debug.ico">
 			<Option link="1" />
+			<Option target="Debug Win32 - gcc" />
 			<Option target="Debug Blah-nix" />
 			<Option target="Debug OsX" />
 			<Option target="Debug Win32 - msvc" />
@@ -551,6 +568,7 @@
 		</Unit>
 		<Unit filename="..\res\release.ico">
 			<Option link="1" />
+			<Option target="Release Win32 - gcc" />
 			<Option target="Release Blah-nix" />
 			<Option target="Release OsX" />
 			<Option target="Release Win32 - msvc" />
