Collisions are "fixed". There is still come instability, and can lead to characters "exploding" away from each other for some reason.
Split the script.* files onto Script_compile.*, Script_run.*, and script.h.

Took some of the interesting script code out of the large switch in run_script and made separate wrapper functions.

--- a/game/game_vs7.vcproj
+++ b/game/game_vs7.vcproj
@@ -295,6 +295,12 @@
 				RelativePath=".\script.c">
 			</File>
 			<File
+				RelativePath=".\Script_comple.c">
+			</File>
+			<File
+				RelativePath=".\Script_run.c">
+			</File>
+			<File
 				RelativePath=".\Server.c">
 			</File>
 			<File
@@ -454,6 +460,12 @@
 			</File>
 			<File
 				RelativePath=".\script.h">
+			</File>
+			<File
+				RelativePath=".\Script_compile.h">
+			</File>
+			<File
+				RelativePath=".\Script_run.h">
 			</File>
 			<File
 				RelativePath=".\Server.h">
