--- a/game/game_vs9.vcproj
+++ b/game/game_vs9.vcproj
@@ -204,7 +204,7 @@
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
 			CharacterSet="2"
 			WholeProgramOptimization="1"
-			EnableManagedIncrementalBuild="0"
+			EnableManagedIncrementalBuild="1"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -227,16 +227,17 @@
 				InlineFunctionExpansion="2"
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
-				AdditionalIncludeDirectories="&quot;$(SolutionDir)enet\include&quot;"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)\enet\include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_CRT_SECURE_NO_DEPRECATE"
 				RuntimeLibrary="2"
-				BufferSecurityCheck="false"
+				BufferSecurityCheck="true"
 				EnableFunctionLevelLinking="true"
 				EnableEnhancedInstructionSet="2"
 				UsePrecompiledHeader="0"
+				BrowseInformation="1"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="false"
-				DebugInformationFormat="3"
+				DebugInformationFormat="1"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -250,13 +251,13 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/FORCE"
-				AdditionalDependencies="shlwapi.lib SHFolder.lib Shell32.lib SDL.lib SDLmain.lib opengl32.lib glu32.lib ws2_32.lib SDL_ttf.lib SDL_mixer.lib SDL_image.lib"
+				AdditionalDependencies="SDL.lib SDLmain.lib SDL_ttf.lib SDL_mixer.lib SDL_image.lib opengl32.lib glu32.lib ws2_32.lib Winmm.lib shlwapi.lib"
 				OutputFile="$(OutDir)/Egoboo2x.exe"
 				Version=""
 				LinkIncremental="1"
 				AdditionalLibraryDirectories=""
-				GenerateDebugInformation="false"
-				SubSystem="2"
+				GenerateDebugInformation="true"
+				SubSystem="1"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				LinkTimeCodeGeneration="1"
@@ -415,6 +416,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\egoboo_rpc.c"
+				>
+			</File>
+			<File
 				RelativePath=".\egoboo_strutil.c"
 				>
 			</File>
@@ -555,18 +560,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\MainLoop.c"
-				>
-				<FileConfiguration
-					Name="Debug|Win32"
-					ExcludedFromBuild="true"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-					/>
-				</FileConfiguration>
-			</File>
-			<File
 				RelativePath=".\Md2.c"
 				>
 			</File>
@@ -595,6 +588,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\ogl_include.c"
+				>
+			</File>
+			<File
 				RelativePath=".\ogl_texture.c"
 				>
 			</File>
@@ -607,7 +604,15 @@
 				>
 			</File>
 			<File
-				RelativePath=".\script.c"
+				RelativePath=".\Physics.c"
+				>
+			</File>
+			<File
+				RelativePath=".\Script_comple.c"
+				>
+			</File>
+			<File
+				RelativePath=".\Script_run.c"
 				>
 			</File>
 			<File
@@ -695,54 +700,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Task.c"
-				>
-			</File>
-			<File
-				RelativePath=".\test_sdl.c"
-				>
-				<FileConfiguration
-					Name="Debug|Win32"
-					ExcludedFromBuild="true"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Debug|x64"
-					ExcludedFromBuild="true"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|Win32"
-					ExcludedFromBuild="true"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|x64"
-					ExcludedFromBuild="true"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-					/>
-				</FileConfiguration>
-			</File>
-			<File
-				RelativePath=".\Ticker.c"
-				>
-			</File>
-			<File
-				RelativePath=".\Timer.c"
-				>
-			</File>
-			<File
 				RelativePath=".\Ui.c"
 				>
 			</File>
@@ -761,15 +718,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\cartman.h"
-				>
-			</File>
-			<File
 				RelativePath=".\char.h"
-				>
-			</File>
-			<File
-				RelativePath=".\char.inl"
 				>
 			</File>
 			<File
@@ -797,7 +746,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\egoboo_math.inl"
+				RelativePath=".\egoboo_rpc.h"
+				>
+			</File>
+			<File
+				RelativePath=".\egoboo_stream.h"
 				>
 			</File>
 			<File
@@ -809,15 +762,15 @@
 				>
 			</File>
 			<File
-				RelativePath=".\egoboo_types.inl"
-				>
-			</File>
-			<File
 				RelativePath=".\egoboo_utility.h"
 				>
 			</File>
 			<File
 				RelativePath=".\enchant.h"
+				>
+			</File>
+			<File
+				RelativePath=".\file_common.h"
 				>
 			</File>
 			<File
@@ -837,10 +790,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\graphic.inl"
-				>
-			</File>
-			<File
 				RelativePath=".\id_md2.h"
 				>
 			</File>
@@ -850,10 +799,6 @@
 			</File>
 			<File
 				RelativePath=".\input.h"
-				>
-			</File>
-			<File
-				RelativePath=".\input.inl"
 				>
 			</File>
 			<File
@@ -869,19 +814,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Md2.inl"
-				>
-			</File>
-			<File
 				RelativePath=".\Menu.h"
 				>
 			</File>
 			<File
 				RelativePath=".\mesh.h"
-				>
-			</File>
-			<File
-				RelativePath=".\mesh.inl"
 				>
 			</File>
 			<File
@@ -897,19 +834,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Network.inl"
-				>
-			</File>
-			<File
 				RelativePath=".\object.h"
-				>
-			</File>
-			<File
-				RelativePath=".\object.inl"
-				>
-			</File>
-			<File
-				RelativePath=".\ogl_include.c"
 				>
 			</File>
 			<File
@@ -925,11 +850,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\particle.inl"
+				RelativePath=".\passage.h"
 				>
 			</File>
 			<File
-				RelativePath=".\passage.h"
+				RelativePath=".\Physics.h"
 				>
 			</File>
 			<File
@@ -938,6 +863,14 @@
 			</File>
 			<File
 				RelativePath=".\script.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Script_compile.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Script_run.h"
 				>
 			</File>
 			<File
@@ -950,18 +883,6 @@
 			</File>
 			<File
 				RelativePath=".\System.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Task.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Ticker.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Timer.h"
 				>
 			</File>
 			<File
@@ -1117,6 +1038,26 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\inspirational\cartman.h"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
 				RelativePath=".\obsolete\cartman_mouse3.c"
 				>
 				<FileConfiguration
@@ -1224,7 +1165,355 @@
 					/>
 				</FileConfiguration>
 			</File>
+			<File
+				RelativePath=".\MainLoop.c"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\obsolete\old_Client.c"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\obsolete\old_Client.h"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\obsolete\old_network.c"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\obsolete\old_Network.h"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\obsolete\old_Server.c"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\obsolete\old_Server.h"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\Task.c"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\Task.h"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\Ticker.c"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\Ticker.h"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\Timer.c"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\Timer.h"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+					/>
+				</FileConfiguration>
+			</File>
 		</Filter>
+		<Filter
+			Name="Inline Files"
+			>
+			<File
+				RelativePath=".\char.inl"
+				>
+			</File>
+			<File
+				RelativePath=".\egoboo_math.inl"
+				>
+			</File>
+			<File
+				RelativePath=".\egoboo_stream.inl"
+				>
+			</File>
+			<File
+				RelativePath=".\egoboo_types.inl"
+				>
+			</File>
+			<File
+				RelativePath=".\graphic.inl"
+				>
+			</File>
+			<File
+				RelativePath=".\input.inl"
+				>
+			</File>
+			<File
+				RelativePath=".\Md2.inl"
+				>
+			</File>
+			<File
+				RelativePath=".\mesh.inl"
+				>
+			</File>
+			<File
+				RelativePath=".\Network.inl"
+				>
+			</File>
+			<File
+				RelativePath=".\object.inl"
+				>
+			</File>
+			<File
+				RelativePath=".\particle.inl"
+				>
+			</File>
+			<File
+				RelativePath=".\Physics.inl"
+				>
+			</File>
+		</Filter>
+		<File
+			RelativePath=".\test_sdl.c"
+			>
+			<FileConfiguration
+				Name="Debug|Win32"
+				ExcludedFromBuild="true"
+				>
+				<Tool
+					Name="VCCLCompilerTool"
+				/>
+			</FileConfiguration>
+			<FileConfiguration
+				Name="Debug|x64"
+				ExcludedFromBuild="true"
+				>
+				<Tool
+					Name="VCCLCompilerTool"
+				/>
+			</FileConfiguration>
+			<FileConfiguration
+				Name="Release|Win32"
+				ExcludedFromBuild="true"
+				>
+				<Tool
+					Name="VCCLCompilerTool"
+				/>
+			</FileConfiguration>
+			<FileConfiguration
+				Name="Release|x64"
+				ExcludedFromBuild="true"
+				>
+				<Tool
+					Name="VCCLCompilerTool"
+				/>
+			</FileConfiguration>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
