Egoboo path is now relative

--- a/modbaker/modbaker.cfg
+++ b/modbaker/modbaker.cfg
@@ -1,5 +1,5 @@
 # Modbaker cond'figuration file
 # WARNING: egoboo_path must end with a /
-egoboo_path: /media/disk/Projects/egoboo_svn/branches/2.6.x/
+egoboo_path: ../../2.6.x/
 font_size: 16
 font_file: Negatori.ttf
