--- a/modbaker/src/modbaker_vs7.vcproj
+++ b/modbaker/src/modbaker_vs7.vcproj
@@ -34,7 +34,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="SDL.lib SDLmain.lib SDL_image.lib SDL_ttf.lib opengl32.lib glu32.lib"
+				AdditionalDependencies="SDL.lib SDLmain.lib SDL_image.lib SDL_ttf.lib opengl32.lib glu32.lib guichan.lib guichan_sdl.lib guichan_opengl.lib"
 				OutputFile="$(OutDir)/modbaker.exe"
 				LinkIncremental="2"
 				GenerateDebugInformation="TRUE"
@@ -148,6 +148,9 @@
 			</File>
 			<File
 				RelativePath=".\renderer_misc.cpp">
+			</File>
+			<File
+				RelativePath=".\renderer_primitives.cpp">
 			</File>
 			<File
 				RelativePath=".\SDL_extensions.cpp">
