Welding function fixed and integrated into the menu Global object repository added Now the object icons get drawn instead of the blue boxes

--- a/modbaker/src/Makefile
+++ b/modbaker/src/Makefile
@@ -6,8 +6,9 @@ CC = g++ -Wall
 # What to build ?
 MB_BIN := modbaker
 MB_SRC := controls.cpp edit.cpp frustum.cpp global.cpp \
-          mesh.cpp modbaker.cpp \
+          mesh.cpp mesh_misc.cpp modbaker.cpp \
           ogl_debug.cpp ogl_extensions.cpp ogl_include.cpp \
+          os_linux.cpp \
           renderer.cpp renderer_misc.cpp renderer_primitives.cpp \
           SDL_extensions.cpp SDL_GL_extensions.cpp utility.cpp \
           window.cpp
