Add window size to the config

--- a/modbaker/modbaker.cfg
+++ b/modbaker/modbaker.cfg
@@ -1,5 +1,7 @@
-# Modbaker cond'figuration file
+# Modbaker configuration file
 # WARNING: egoboo_path must end with a /
 egoboo_path: ../../2.6.x/
 font_size: 16
 font_file: Negatori.ttf
+screen_width: 1024
+screen_height: 786
