- Added changing of main texture to fan-dialog - Tile flags and texture data can be changed using the 'Update' button in the fan info dialog

--- a/editor/data/editor.cfg
+++ b/editor/data/editor.cfg
@@ -10,6 +10,9 @@ fullscreen    = 0		; 0: windowed 1: fullscreen 2: auto
 debugmode     = 1
 zbuffer       = 0
 dblclicktime  = 0
+{editor]
+mapsize       = 8       ; Default size for new map
+
 
 
 
