--- a/editor/src/EgoEditor.vcxproj.filters
+++ b/editor/src/EgoEditor.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="editmain.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="wallmake.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="editdraw.h">
@@ -72,6 +75,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="editmain.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="wallmake.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
