- Reworked how the Quest and Skill system worked by introducing a new HashMap-like data structure to store multiple IDSZ and a IDSZ level. Could do with some optimizations since run time is O(n) instead of O(1).

--- a/game/game_vs10.vcxproj
+++ b/game/game_vs10.vcxproj
@@ -67,6 +67,7 @@
     <ClCompile Include="graphic_mad.c" />
     <ClCompile Include="graphic_prt.c" />
     <ClCompile Include="hash.c" />
+    <ClCompile Include="IDSZ_map.c" />
     <ClCompile Include="input.c" />
     <ClCompile Include="lighting.c" />
     <ClCompile Include="link.c" />
@@ -167,6 +168,7 @@
     <ClInclude Include="graphic_mad.h" />
     <ClInclude Include="graphic_prt.h" />
     <ClInclude Include="hash.h" />
+    <ClInclude Include="IDSZ_map.h" />
     <ClInclude Include="input.h" />
     <ClInclude Include="lighting.h" />
     <ClInclude Include="link.h" />
