- determined that the "error: array type has incomplete element type" error reported by penguinflyer5234 does not exist using gcc-4.4.3-4ubuntu5 - fixed bad line endings in the run_astyle.sh script - ran the sun_astyle.sh script to auto-format

--- a/game/game.cbp
+++ b/game/game.cbp
@@ -358,6 +358,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="EncList.h" />
+		<Unit filename="IDSZ_map.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="IDSZ_map.h" />
 		<Unit filename="PrtList.c">
 			<Option compilerVar="CC" />
 		</Unit>
