--- a/game/game_vs10.vcxproj
+++ b/game/game_vs10.vcxproj
@@ -280,7 +280,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>enetd.lib; shlwapi.lib; SHFolder.lib; Shell32.lib; SDLd.lib; SDLmaind.lib; opengl32.lib; glu32.lib; ws2_32.lib; SDL_ttf.lib; SDL_mixerd.lib; SDL_imaged.lib; lua5.1.lib; physfs.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <Version>2.8.0b</Version>
+      <Version>2.8.1</Version>
       <IgnoreSpecificDefaultLibraries>
       </IgnoreSpecificDefaultLibraries>
     </Link>
@@ -315,7 +315,7 @@
       <AdditionalDependencies>enet.lib;shlwapi.lib;SHFolder.lib;Shell32.lib;SDL.lib;SDLmain.lib;opengl32.lib;glu32.lib;ws2_32.lib;SDL_ttf.lib;SDL_mixer.lib;SDL_image.lib;lua5.1.lib;physfs.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <TargetMachine>MachineX86</TargetMachine>
       <EnableUAC>false</EnableUAC>
-      <Version>2.8.0b</Version>
+      <Version>2.8.1</Version>
       <AdditionalOptions>/verbose:lib %(AdditionalOptions)</AdditionalOptions>
       <IgnoreSpecificDefaultLibraries>LIBCMT.lib;</IgnoreSpecificDefaultLibraries>
       <OptimizeReferences>true</OptimizeReferences>
