New map editor - Removed 'Update' from Tile-Properties-Dialog - Moved further checks about Edit-Mode of the editor-frontend - Compacted some code - Added work-directory in configuration-file - Added grid in 2D-Map for easier creation of maps by concept maps - Update of How-To documentation

--- a/editor/data/editor.cfg
+++ b/editor/data/editor.cfg
@@ -10,8 +10,9 @@ fullscreen    = 0		; 0: windowed 1: fullscreen 2: auto
 debugmode     = 1
 zbuffer       = 0
 dblclicktime  = 0
-{editor]
-mapsize       = 32       ; Default size for new map
+[editor]
+mapsize       = 32      ; Default size for new map
+workdir       = module  ; Directory used for loading/saving data
 
 
 
