--- a/game/game_vs7.vcproj
+++ b/game/game_vs7.vcproj
@@ -92,7 +92,7 @@
 				OptimizeForWindowsApplication="TRUE"
 				AdditionalIncludeDirectories="&quot;$(SolutionDir)enet\include&quot;;&quot;$(SolutionDir)game&quot;;file_formats;platform;extensions;Fluid_Studios_Memory_Manager"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_CONSOLE;_CRT_SECURE_NO_DEPRECATE"
-				RuntimeLibrary="3"
+				RuntimeLibrary="2"
 				BufferSecurityCheck="TRUE"
 				EnableFunctionLevelLinking="TRUE"
 				EnableEnhancedInstructionSet="2"
@@ -155,6 +155,9 @@
 				RelativePath=".\clock.c">
 			</File>
 			<File
+				RelativePath=".\egoboo_display_list.c">
+			</File>
+			<File
 				RelativePath=".\egoboo_endian.c">
 			</File>
 			<File
@@ -208,6 +211,9 @@
 			</File>
 			<File
 				RelativePath=".\egoboo_config.h">
+			</File>
+			<File
+				RelativePath=".\egoboo_display_list.h">
 			</File>
 			<File
 				RelativePath=".\egoboo_endian.h">
