- lots of changes to the way game objects (chr, prt, enc) are spawned and how they are tracked. This fixed a lot of particle issues where secondary particles were not spawning at the end of the 1st particle. It was also causing problems with particles in the PrtList never being properly freed and making the allocation of new particles very slow. - added a new test module that is completely blank. You can import test characters in here to test things like particle/spell effects, weapons, and blah - added a new module filter that only shows up in dev mode, FILTER_HIFDEN, so that the test module_add_idsz_vfs(s) won't show up for normal players - changed some physics so that the fireball now acts more like it used to - some minor formatting

--- a/game/game_vs7.vcproj
+++ b/game/game_vs7.vcproj
@@ -990,6 +990,28 @@
 				RelativePath=".\platform\sys_win32.c">
 			</File>
 		</Filter>
+		<Filter
+			Name="basicdat init files"
+			Filter="">
+			<File
+				RelativePath="..\basicdat\actions.txt">
+			</File>
+			<File
+				RelativePath="..\basicdat\aicodes.txt">
+			</File>
+			<File
+				RelativePath="..\basicdat\fans.txt">
+			</File>
+			<File
+				RelativePath="..\basicdat\link.txt">
+			</File>
+			<File
+				RelativePath="..\basicdat\scancode.txt">
+			</File>
+			<File
+				RelativePath="..\basicdat\script.txt">
+			</File>
+		</Filter>
 	</Files>
 	<Globals>
 	</Globals>
